# lms_server

./: .coverage  .coveragerc  .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
lms/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: course_data.json  lesson_data.json
lms/migrations/: 0001_initial.py  0002_lesson_course.py  0003_alter_lesson_course_alter_lesson_preview.py  0004_alter_lesson_video.py  0005_course_author.py  0006_alter_course_author_alter_lesson_video.py  0007_course_price_alter_lesson_video.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/fixtures/: groups.json  payment_data.json  users.json  users_data.json
users/migrations/: 0001_initial.py  0002_user_avatar_user_country_user_phone_alter_user_email.py  0003_remove_user_username_payment.py  0004_subscription.py  0005_payment_session_id_payment_status_alter_payment_date.py  0006_payment_payment_link_payment_stripe_product_id.py
